create and generate files